--- a/app/src/main/res/menu/main_bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/main_bottom_navigation_menu.xml
@@ -6,9 +6,9 @@
     <item
         android:id="@+id/nav_item_exercises_screen"
         android:enabled="true"
-        android:title="Workouts"/>
+        android:title="Exercises"/>
     <item
         android:id="@+id/nav_item_profile_screen"
         android:enabled="true"
-        android:title="Profile"/>
+        android:title="Settings"/>
 </menu>
