Record exercise sessions

--- a/app/src/main/res/layout/activity_app_lock.xml
+++ b/app/src/main/res/layout/activity_app_lock.xml
@@ -8,72 +8,107 @@
     tools:context=".activities.AppLockActivity">
 
     <TextView
-        android:id="@+id/oh_no_text"
+        android:id="@+id/status_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="32dp"
         android:fontFamily="@font/archivo"
         android:text="Oh no!\nYou can't use this app!"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/step_count_text_view"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="124dp"
-        android:fontFamily="@font/archivo"
-        android:text="0"
-        android:textColor="@color/white"
-        android:textSize="64sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/oh_no_text" />
+        android:layout_marginTop="64dp"
+        android:layout_marginBottom="64dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/target_label"
+        app:layout_constraintTop_toBottomOf="@+id/status_text">
+
+        <TextView
+            android:id="@+id/progress_value_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/archivo"
+            android:text="0"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="64sp" />
+
+        <TextView
+            android:id="@+id/progress_value_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/archivo"
+            android:text="steps done"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="36sp" />
+    </LinearLayout>
 
     <TextView
-        android:id="@+id/step_count_label"
+        android:id="@+id/target_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="32dp"
         android:fontFamily="@font/archivo"
-        android:text="steps done"
-        android:textColor="@color/white"
-        android:textSize="36sp"
-        app:layout_constraintEnd_toEndOf="@+id/step_count_text_view"
-        app:layout_constraintStart_toStartOf="@+id/step_count_text_view"
-        app:layout_constraintTop_toBottomOf="@+id/step_count_text_view" />
-
-    <TextView
-        android:id="@+id/required_count_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="139dp"
-        android:fontFamily="@font/archivo"
-        android:text="You need to take at least"
+        android:text="You need to take at least\n{n} steps"
+        android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/session_controller_button"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/step_count_label" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:lineHeight="38sp" />
 
-    <TextView
-        android:id="@+id/required_count_text_view"
+    <Button
+        android:id="@+id/session_controller_button"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="67dp"
+        android:layout_marginBottom="48dp"
+        android:text="Start Exercise"
+        android:textColor="@color/primary_100"
+        app:cornerRadius="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/change_exercise_label"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:strokeColor="@color/primary_100" />
+
+    <TextView
+        android:id="@+id/change_exercise_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="16dp"
         android:fontFamily="@font/archivo"
-        android:text="{n} steps"
-        android:textColor="@color/white"
-        android:textSize="28sp"
+        android:text="Change Exercise:"
+        android:textColor="@color/neutral_100"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/required_count_label"
-        app:layout_constraintStart_toStartOf="@+id/required_count_label"
-        app:layout_constraintTop_toBottomOf="@+id/required_count_label" />
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Spinner
+        android:id="@+id/exercise_list_spinner"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:spinnerMode="dropdown"
+        app:layout_constraintBottom_toBottomOf="@+id/change_exercise_label"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/change_exercise_label"
+        app:layout_constraintTop_toTopOf="@+id/change_exercise_label" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
