--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -20,11 +20,29 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/email_input_field"
+        android:id="@+id/name_input_field"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="48dp"
+        android:layout_marginEnd="24dp"
+        android:ems="10"
+        android:fontFamily="@font/raleway"
+        android:hint="Name"
+        android:inputType="textPersonName"
+        android:paddingLeft="12sp"
+        android:paddingRight="12sp"
+        android:textColor="@color/neutral_400"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/activity_hint" />
+
+    <EditText
+        android:id="@+id/email_input_field"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="24dp"
         android:ems="10"
         android:fontFamily="@font/raleway"
@@ -35,7 +53,7 @@
         android:textColor="@color/neutral_400"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activity_hint" />
+        app:layout_constraintTop_toBottomOf="@+id/name_input_field" />
 
     <EditText
         android:id="@+id/password_input_field"
