--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.TouchSomeGrass" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.TouchSomeGrass" parent="Theme.MaterialComponents.Light.DarkActionBar">
+        <!-- Overrides -->
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primary_700</item>
         <item name="colorOnPrimary">@color/white</item>
