--- a/app/src/main/res/layout/activity_app_lock.xml
+++ b/app/src/main/res/layout/activity_app_lock.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/archivo"
-        android:text="Oh no!\nYou can't use this app!"
+        android:text="Time to exercise!"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="24sp"
@@ -27,8 +27,8 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
-        android:layout_marginBottom="64dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginBottom="48dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/target_label"
         app:layout_constraintTop_toBottomOf="@+id/status_text">
@@ -58,7 +58,7 @@
         android:id="@+id/target_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="48dp"
         android:fontFamily="@font/archivo"
         android:text="You need to take at least\n{n} steps"
         android:textAlignment="center"
