--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,7 +24,7 @@
                 android:layout_width="112dp"
                 android:layout_height="112dp"
                 android:layout_marginStart="24dp"
-                android:layout_marginTop="48dp"
+                android:layout_marginTop="64dp"
                 android:layout_marginBottom="24dp"
                 app:cardCornerRadius="72dp"
                 app:cardElevation="0dp"
@@ -82,11 +82,24 @@
                 android:id="@+id/log_out_button"
                 android:layout_width="28dp"
                 android:layout_height="28dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:background="#00000000"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_door_open"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:tint="@color/white" />
+
+            <ImageButton
+                android:id="@+id/edit_button"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:background="#00000000"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_door_open"
+                android:src="@drawable/ic_pen"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:tint="@color/white" />
