Add feature to follow friends

--- a/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_leaderboard.xml
@@ -6,16 +6,39 @@
     android:layout_height="match_parent"
     tools:context=".fragments.LeaderboardFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/leaderboard_list_rv"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/primary_100"
-        android:scrollbars="vertical"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/leaderboard_list_rv"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@color/primary_100"
+            android:scrollbars="vertical"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toTopOf="@+id/find_friends_button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+        </androidx.recyclerview.widget.RecyclerView>
+
+        <Button
+            android:id="@+id/find_friends_button"
+            android:layout_width="0dp"
+            android:layout_height="52dp"
+            android:backgroundTint="@color/secondary_400"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
+            android:text="Find Friends"
+            app:cornerRadius="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/leaderboard_list_rv" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
