Redesign leaderboard find friends button

--- a/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_leaderboard.xml
@@ -31,11 +31,14 @@
             android:id="@+id/find_friends_button"
             android:layout_width="0dp"
             android:layout_height="52dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="8dp"
             android:backgroundTint="@color/secondary_400"
             android:insetTop="0dp"
             android:insetBottom="0dp"
             android:text="Find Friends"
-            app:cornerRadius="0dp"
+            app:cornerRadius="6dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
