--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -103,6 +103,19 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:tint="@color/white" />
+
+            <ImageButton
+                android:id="@+id/exp_help_btn"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:layout_marginStart="12dp"
+                android:background="#00000000"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_help_circle"
+                app:layout_constraintBottom_toBottomOf="@+id/userTitleLabel"
+                app:layout_constraintStart_toEndOf="@+id/userTitleLabel"
+                app:layout_constraintTop_toTopOf="@+id/userTitleLabel"
+                app:tint="#bbb" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <LinearLayout
